src/main/java/com/example/apiwords/errors/custom_exceptions/Exist.java
package com.example.apiwords.errors.custom_exceptions;

public class Exist extends RuntimeException {
    public Exist(String message) {
        super(message);
    }
}
